# 포인트, 배송지 관리 1차